# revoise

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  WORK_PLAN.md  config.example.json  mypy.ini  pyproject.toml  requirements.txt  revoice_portable.bat  revoice_portable.sh  ruff.toml  run_ui.bat  run_ui.sh
.github/: CODEOWNERS  release-drafter.yml
core/: config.py  externals.py  fix_typo.bat  model_manager.py  model_service.py  model_sources.py  pipeline.py  pkg_installer.py  presets.py  qwen_editor.py  script_parser.py  tts_adapters.py  tts_dependencies.py  tts_registry.py  vibe_editor.py
docs/: cli.md  config.md  development-plan.md  index.md  quickstart.md  troubleshooting.md  tts_vibevoice.md  ui-guide.md  ui_timeline.md
models/: README.md  model_registry.json
presets/: neutral.rvpreset
projects/: default.rvpreset  example.rvproj
server/: __init__.py  main.py
tests/: conftest.py  test_audio_shape_normalization.py  test_coqui_no_qmessagebox.py  test_edited_text.py  test_ensure_model.py  test_fetch_stt_models.py  test_fetch_tts_models.py  test_load_config_defaults.py  test_merge_into_phrases.py  test_missing_deps.py  test_model_manager.py  test_model_registry_urls.py  test_preflight.py  test_qa_runner.py  test_script_parser.py  test_silero_autofetch_env.py  test_silero_cache.py  test_silero_no_ssl_env.py  test_silero_params.py  test_silero_tts_logging.py  test_smoke.py  test_transcribe_whisper.py  test_tts_fallback.py  test_tts_registry.py  test_ui_config.py  test_vibevoice_integration.py
tools/: freeze_reqs.py  (+8 more)
(+19 files in other folders)
