[project]
name = "revoice"
version = "0.1.0"
description = "STT/TTS pipeline with PySide6 UI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyside6>=6.6",
    "numpy>=1.26",
    "pydub>=0.25",
    "soundfile>=0.12",
    "gtts>=2.5",
    "tqdm>=4.66",
    "num2words>=0.5",
    "rich>=13.7",
    "python-ffmpeg>=2.0",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "cryptography>=42.0.0", # encryption support
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
revoice-check = "tools.qa_runner:main"

[tool.uv]
# При желании можно зафиксировать индекс/кэши

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
